--- a/templates/admindash.html
+++ b/templates/admindash.html
@@ -110,7 +110,7 @@
 <body class="bg-dark">
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="/admin/dashboard/licenses">overview</a>
+  <a href="/admin/dashboard">overview</a>
   <a href="/admin/dashboard/users">users</a>
   <a href="/admin/dashboard/licenses">licenses</a>
   <a href="/admin/dashboard/plans">plans</a>
