--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -92,6 +92,23 @@
       color: #818181;
     }
 
+       table {
+      width: 100%;
+    }
+
+    thead, tbody tr {
+      display: table;
+      width: 100%;
+      table-layout: fixed;
+    }
+
+    tbody {
+      display: block;
+      overflow-y: auto;
+      table-layout: fixed;
+      max-height: 200px;
+    }
+
     #main {
       transition: margin-left .5s;
       padding: 20px;
@@ -129,7 +146,7 @@
         </div>
         <div class="col-md-6 text-left justify-content-center align-items-center">
             <div class="card">
-                <table class="table mt-3 mb-3 px-2">
+                <table class="table mb-3 px-2">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
