reordered heights of some elements so that they work

--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -20,6 +20,10 @@
         height:90%;
     }
 
+    .h-30{
+        height:30%;
+    }
+
     .h-80{
         height:80%;
     }
@@ -203,19 +207,8 @@
         <div class="col-3"></div>
     </div>
 </div>
-<div class="container-fluid h-10 bg-dark text-white ">
+<div class="container-fluid h-30 bg-dark text-white ">
     <div class="row">
-    </div>
-</div>
-<div class="container-fluid h-10 bg-dark text-white ">
-    <div class="row">
-         <!---
-        <div class="col-4"></div>
-        <div class="col-4 text-center align-bottom">
-            SaaS distrubution system by Tom Holland :)
-        </div>
-        <div class="col-4"></div>
-         --->
     </div>
 </div>
 </body>
