made it download a file on execution, required page to be refreshed to show changes tho unfortunatley.

--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -188,7 +188,7 @@
                 <div class="card-body">
                 <h5 class="card-title">Create Licenses</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Please be aware, page may need to be refreshed to show changes in table.</h6>
-                    <label for="plan-select">Generate</label>
+                    <label for="plan-select">Generate (file download indicated execution has finished)</label>
                     <form action="" method="post">
                         <select name="plans" id="plan-select" name="plan-select">
                             <option value="">choose from available plans</option>
