--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -28,6 +28,10 @@
         height:10%;
     }
 
+    .h-5{
+        height:5%;
+    }
+
     .sidenav {
       height: 100%;
       width: 0;
@@ -176,15 +180,7 @@
         <div class="col-3"></div>
     </div>
 </div>
-<div class="container-fluid h-10 bg-dark text-white ">
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-4 text-center align-bottom">
-            SaaS distrubution system by Tom Holland :)
-        </div>
-        <div class="col-4"></div>
-    </div>
-</div>
+<div class="container-fluid h-10 bg-dark text-white "></div>
 </body>
 <script>
 if (typeof(Storage) !== "undefined") {
