--- a/templates/adminplans.html
+++ b/templates/adminplans.html
@@ -103,6 +103,19 @@
       color: #818181;
     }
 
+    .invisblebutton {
+      background: none!important;
+      border: none;
+      padding: 0!important;
+      /*optional*/
+      font-family: arial, sans-serif;
+      /*input has OS specific font-family*/
+      color: #818181;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+
      table {
       width: 100%;
     }
@@ -166,6 +179,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">Renewal Interval</th>
                         <th scope="col">Renewal Price</th>
+                        <th scope="col" width="10%"></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -175,6 +189,9 @@
                         <td>{{ value[0] }}</td>
                         <td>{{ value[1] }} Days</td>
                         <td>£{{ value[2] }}</td>
+                        <form method="post">
+                            <td width="10%"><button  id="delete" name="delete" type="submit" class="invisblebutton" value="{{ value[0] }}"><i class="fas fa-trash-alt"></i></button></td>
+                        </form>
                     </tr>
                     {% endfor %}
                     </tbody>
