now displays appt error msg, issue is when trying to reload this page it attempts to do so as a post request but realistically this shouldnt be an issue, on reload it will only attempt to delete the entry again (to no prevail, again).

--- a/templates/adminplans.html
+++ b/templates/adminplans.html
@@ -196,6 +196,9 @@
                     {% endfor %}
                     </tbody>
                 </table>
+                {% if reason %}
+                                <h6 class="mt-1 text-muted text-center"> {{ reason }}</h6>
+                    {% endif %}
             </div>
             <div class="card mt-3 text-dark">
                 <div class="card-body">
