--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -97,6 +97,18 @@
       color: #818181;
     }
 
+    .invisblebutton {
+      background: none!important;
+      border: none;
+      padding: 0!important;
+      /*optional*/
+      font-family: arial, sans-serif;
+      /*input has OS specific font-family*/
+      color: #818181;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
        table {
       width: 100%;
     }
@@ -160,6 +172,7 @@
                         <th scope="col">Last</th>
                         <th scope="col">Email</th>
                         <th scope="col">License</th>
+                        <th scope="col" width="10%"></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -171,6 +184,13 @@
                         <td>{{ value[2] }}</td>
                         <td>{{ value[3] }}</td>
                         <td>{{ value[6] }}</td>
+                        {% if value[5] == "FALSE" %}
+                            <form method="post">
+                                <td width="10%"><button  id="delete" name="delete" type="submit" class="invisblebutton" value="{{ value[0] }}"><i class="fas fa-trash-alt"></i></button></td>
+                            </form>
+                        {% else %}
+                            <td width="10%"></td>
+                        {% endif %}
                     </tr>
                     {% endfor %}
                     </tbody>
