working on merge sort, progress

--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -168,11 +168,11 @@
         </div>
         <div class="col-md-6 text-left justify-content-center align-items-center">
             <div class="card">
-                <table class="table mb-3 px-2">
+                <table id="dbtable" class="table mb-3 px-2">
                     <thead class="thead-dark">
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">License</th>
+                        <th scope="col" onclick="sortTable2(0)">License</th>
                         <th scope="col">User</th>
                         <th scope="col">Plan</th>
                         <th scope="col">Next Renewal</th>
@@ -250,5 +250,50 @@ function closeNav() {
         localStorage.setItem("sidebar", "closed");
     }
 }
+
+function sortTable2(col) {
+    var table, rows, preswitch = [], switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+    table = document.getElementById("dbtable");
+    rows = table.rows;
+    for (i = 1; i < (rows.length); i++) {
+        preswitch.push(rows[i].getElementsByTagName("TD")[col].innerHTML)
+    }
+    console.log(preswitch);
+
+    function merge(left, right) {
+        let array = []
+        // Break out of loop if any one of the array gets empty
+        while (left.length && right.length) {
+            // Pick the smaller among the smallest element of left and right sub arrays
+            if (left[0] < right[0]) {
+                array.push(left.shift())
+            } else {
+                array.push(right.shift())
+            }
+        }
+
+        // Concatenating the leftover elements
+        // (in case we didn't go through the entire left or right array)
+        // ... acts as a spread operator
+        return [ ...array, ...left, ...right ]
+    }
+
+    function mergeSort(array) {
+      const halflength = array.length / 2
+
+      // Base case
+      if(array.length < 2){
+        return array
+      }
+
+      const left = array.splice(0, halflength)
+      return merge(mergeSort(left),mergeSort(array))
+    }
+
+    sorted = mergeSort(preswitch);
+    console.log(sorted);
+}
+
+
 </script>
 </html>
