--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -29,7 +29,7 @@
     }
 
     .h-60{
-        height60%;
+        height: 60%;
     }
 
     .h-10{
@@ -171,8 +171,8 @@
                 <table id="dbtable" class="table mb-3 px-2">
                     <thead class="thead-dark">
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col" onclick="sortTable2(0)">License</th>
+                        <th scope="col" onclick="sortTable2(0)">#</th>
+                        <th scope="col" onclick="sortTable2(1)">License</th>
                         <th scope="col">User</th>
                         <th scope="col">Plan</th>
                         <th scope="col">Next Renewal</th>
@@ -183,7 +183,7 @@
                     <tbody>
                     {% for value in licenses %}
                     <tr class="tbody text-dark">
-                        <th scope="row ">{{ licenses.index(value) }}</th>
+                        <td scope="row ">{{ licenses.index(value) }}</td>
                         <td>{{ value[0] }}</td>
                         {% if value[1] != None %}
                         <td>@{{ value[1] }}</td>
@@ -193,9 +193,7 @@
                         <td>{{ value[7] }}</td>
                         <td>{{ value[6] }}</td>
                         <td>{{ value[5] }}</td>
-                        <form method="post">
-                            <td width="10%"><button  id="delete" name="delete" type="submit" class="invisblebutton" value="{{ value[0] }}"><i class="fas fa-trash-alt"></i></button></td>
-                        </form>
+                        <td width="10%"><form method="post"><button  id="delete" name="delete" type="submit" class="invisblebutton" value="{{ value[0] }}"><i class="fas fa-trash-alt"></i></button></form></td>
                     </tr>
                     {% endfor %}
                     </tbody>
@@ -230,69 +228,110 @@
 </div>
 </body>
 <script>
-if (typeof(Storage) !== "undefined") {
-        if(localStorage.getItem("sidebar") == "opened"){
-            document.getElementById("mySidenav").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
+
+    if (typeof (Storage) !== "undefined") {
+      if (localStorage.getItem("sidebar") == "opened") {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+      }
     }
-function openNav() {
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-  if (typeof(Storage) !== "undefined") {
+
+    function openNav() {
+      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+      if (typeof (Storage) !== "undefined") {
         localStorage.setItem("sidebar", "opened");
+      }
     }
-}
-function closeNav() {
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-  if (typeof(Storage) !== "undefined") {
+
+    function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("main").style.marginLeft = "0";
+      if (typeof (Storage) !== "undefined") {
         localStorage.setItem("sidebar", "closed");
+      }
     }
-}
 
-function sortTable2(col) {
-    var table, rows, preswitch = [], switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-    table = document.getElementById("dbtable");
-    rows = table.rows;
-    for (i = 1; i < (rows.length); i++) {
-        preswitch.push(rows[i].getElementsByTagName("TD")[col].innerHTML)
-    }
-    console.log(preswitch);
+    var lastCol = undefined;
+    var dir = undefined;
 
-    function merge(left, right) {
+    function sortTable2(col) {
+      if (lastCol == undefined) lastCol = col;
+      if (dir == undefined) dir = "asc";
+      if (lastCol != col) {
+        dir = "asc";
+        lastCol = col;
+      }
+      let table, rows, preswitch = [],
+        switching, i, x, y, shouldSwitch, switchcount = 0;
+      table = document.getElementById("dbtable");
+      rows = table.rows;
+      let tbody = document.querySelector("#dbtable > tbody");
+      let new_tbody = tbody.cloneNode();
+      //set direction to ascending initially
+      if (dir == "asc") {
+        dir = "desc"
+      } else {
+        dir = "asc"
+      }
+
+      for (i = 1; i < (rows.length); i++) {
+        preswitch.push([rows[i].getElementsByTagName("TD")[0].innerHTML,rows[i].getElementsByTagName("TD")[col].innerHTML])
+      }
+      //copy of preswitch
+      console.log(preswitch)
+      let preswitch_copy = [...preswitch];
+
+      function merge(left, right) {
         let array = []
         // Break out of loop if any one of the array gets empty
         while (left.length && right.length) {
-            // Pick the smaller among the smallest element of left and right sub arrays
-            if (left[0] < right[0]) {
-                array.push(left.shift())
-            } else {
-                array.push(right.shift())
-            }
+          // Pick the smaller among the smallest element of left and right sub arrays
+          if (left[0][1] < right[0][1]) {
+            array.push(left.shift())
+          } else {
+            array.push(right.shift())
+          }
         }
 
         // Concatenating the leftover elements
         // (in case we didn't go through the entire left or right array)
         // ... acts as a spread operator
-        return [ ...array, ...left, ...right ]
-    }
-
-    function mergeSort(array) {
-      const halflength = array.length / 2
-
-      // Base case
-      if(array.length < 2){
-        return array
+        return [...array, ...left, ...right]
       }
 
-      const left = array.splice(0, halflength)
-      return merge(mergeSort(left),mergeSort(array))
+      function mergeSort(array) {
+        const halflength = array.length / 2
+
+        // Base case
+        if (array.length < 2) {
+          return array
+        }
+
+        const left = array.splice(0, halflength)
+        return merge(mergeSort(left), mergeSort(array))
+      }
+
+      sorted = mergeSort(preswitch);
+      preswitch = preswitch_copy;
+      // console.log(preswitch);
+      console.log(sorted);
+      let index_array = [];
+      // get the order of the sorted array based on the preswitch array
+      sorted.forEach(value => {
+        index_array.push(preswitch.indexOf(value));
+        // console.log(index_array);
+      })
+      console.log(index_array);
+      if(dir=="desc")index_array.reverse();
+      index_array.forEach(index => {
+        // console.log(tbody.children[index].children[1].innerHTML);
+        new_tbody.appendChild(tbody.children[index].cloneNode(true));
+      })
+      tbody.parentElement.replaceChild(new_tbody, tbody);
     }
 
-    sorted = mergeSort(preswitch);
-    console.log(sorted);
-}
+
 
 
 </script>
