--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -113,6 +113,10 @@
       cursor: pointer;
     }
 
+    .clickable {
+        cursor: pointer;
+    }
+
 
     table {
       width: 100%;
@@ -170,7 +174,7 @@
             <div class="card">
                 <table id="dbtable" class="table mb-3 px-2">
                     <thead class="thead-dark">
-                    <tr>
+                    <tr class="clickable">
                         <th scope="col" onclick="sortTable2(0)">#</th>
                         <th scope="col" onclick="sortTable2(1)">License</th>
                         <th scope="col" onclick="sortTable2(2)">User</th>
