--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -235,22 +235,22 @@
 
     if (typeof (Storage) !== "undefined") {
       if (localStorage.getItem("sidebar") == "opened") {
-        document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
+        document.querySelector("#mySidenav").style.width = "250px";
+        document.querySelector("#main").style.marginLeft = "250px";
       }
     }
 
     function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
-      document.getElementById("main").style.marginLeft = "250px";
+      document.querySelector("#mySidenav").style.width = "250px";
+      document.querySelector("#main").style.marginLeft = "250px";
       if (typeof (Storage) !== "undefined") {
         localStorage.setItem("sidebar", "opened");
       }
     }
 
     function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
-      document.getElementById("main").style.marginLeft = "0";
+      document.querySelector("#mySidenav").style.width = "0";
+      document.querySelector("#main").style.marginLeft = "0";
       if (typeof (Storage) !== "undefined") {
         localStorage.setItem("sidebar", "closed");
       }
@@ -270,14 +270,14 @@
       }
       let table, rows, preswitch = [],
         switching, i, x, y, shouldSwitch, switchcount = 0;
-      table = document.getElementById("dbtable");
+      table = document.querySelector("#dbtable");
       rows = table.rows;
-      console.log(document.getElementsByTagName("TH"));
-      for (heading of document.getElementsByTagName("TH")) {
+      console.log(document.querySelectorAll("TH"));
+      for (heading of document.querySelectorAll("TH")) {
       console.log(heading)
         heading.style.textDecoration = "none";
       }
-      rows[0].getElementsByTagName("TH")[col].style.textDecoration = "underline";
+      rows[0].querySelectorAll("TH")[col].style.textDecoration = "underline";
       let tbody = document.querySelector("#dbtable > tbody");
       let new_tbody = tbody.cloneNode();
       //set direction to ascending initially
@@ -288,7 +288,7 @@
       }
 
       for (i = 1; i < (rows.length); i++) {
-        preswitch.push([rows[i].getElementsByTagName("TD")[0].innerHTML,rows[i].getElementsByTagName("TD")[col].innerHTML])
+        preswitch.push([rows[i].querySelectorAll("TD")[0].innerHTML,rows[i].querySelectorAll("TD")[col].innerHTML])
       }
       //copy of preswitch
       //console.log(preswitch)
