--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -174,7 +174,7 @@
             <div class="card">
                 <table id="dbtable" class="table mb-3 px-2">
                     <thead class="thead-dark">
-                    <tr name="headings" class="clickable">
+                    <tr class="clickable">
                         <th scope="col" onclick="sortTable2(0)">#</th>
                         <th scope="col" onclick="sortTable2(1)">License</th>
                         <th scope="col" onclick="sortTable2(2)">User</th>
