--- a/templates/dashboardaccount.html
+++ b/templates/dashboardaccount.html
@@ -11,49 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-    <style>
-    body,html{
-        height:100%;
-    }
-
-    a:link {
-      color: black;
-      background-color: transparent;
-      text-decoration: none;
-    }
-
-    a:visited {
-      color: black;
-      background-color: transparent;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: black;
-      font-weight: bold;
-      background-color: transparent;
-      text-decoration: none;
-    }
-
-    a:active {
-      color: black;
-      background-color: transparent;
-      text-decoration: none;
-    }
-
-    .h-90{
-        height:90%;
-    }
-
-    .h-80{
-        height:80%;
-    }
-
-    .h-10{
-        height:10%;
-    }
-
-    </style>
+   <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/dashboardaccount.css') }}">
 </head>
 
 <body>
