--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -11,23 +11,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-    <style>
-    body,html{
-        height:100%;
-    }
-
-    .h-90{
-        height:90%;
-    }
-
-    .h-80{
-        height:80%;
-    }
-
-    .h-10{
-        height:10%;
-    }
-    </style>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/login.css') }}">
 </head>
 
 <body>
@@ -54,11 +38,5 @@
     </div>
 </div>
 </body>
-<script>
-function redirectFunct() {
-   location.replace("http://127.0.0.1:5000/login")
-   }
-
-   setTimeout(function(){ redirectFunct(); }, 3000);
-</script>
+<script src="{{url_for('static', filename='js/redirect.js')}}"></script>
 </html>
