--- a/templates/adminusers.html
+++ b/templates/adminusers.html
@@ -11,141 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
-    <style>
-    body,html{
-        height:100%;
-    }
-
-    .h-90{
-        height:90%;
-    }
-
-    .h-80{
-        height:80%;
-    }
-
-    .h-10{
-        height:10%;
-    }
-
-    .h-5{
-        height:5%;
-    }
-
-    .sidenav {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      left: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      padding-top: 60px;
-      transition: 0.5s;
-    }
-
-    .sidenav a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-    }
-
-    .sidenav a:hover {
-      color: #f1f1f1;
-    }
-
-    .sidenav .closebtn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px;
-    }
-
-    .footer {
-      color: #f1f1f1;
-      padding: 8px 8px 8px 32px;
-      white-space: nowrap;
-    }
-
-    .navbarbutton {
-      font-size: 150%;
-      color: #E5D4C0;
-      position: fixed;
-    }
-
-    .navbarbutton a {
-      padding: 8px 8px 8px 32px;
-      color: #818181;
-      transition: 0.3s;
-    }
-
-    .navbarbutton a:hover {
-      text-decoration: none;
-      color: #f1f1f1 !important;
-    }
-
-    .navbarbutton a:visited {
-      color: #818181;
-    }
-
-    .navbarbutton a:link {
-      color: #818181;
-    }
-
-    .invisblebutton {
-      background: none!important;
-      border: none;
-      padding: 0!important;
-      /*optional*/
-      font-family: arial, sans-serif;
-      /*input has OS specific font-family*/
-      color: #818181;
-      text-decoration: underline;
-      cursor: pointer;
-    }
-    
-    .clickable {
-        cursor: pointer;
-    }
-    
-
-       table {
-      width: 100%;
-    }
-
-    thead, tbody tr {
-      display: table;
-      width: 100%;
-      table-layout: fixed;
-    }
-
-    tbody {
-      display: block;
-      overflow-y: auto;
-      table-layout: fixed;
-      max-height: 200px;
-    }
-
-    #main {
-      transition: margin-left .5s;
-      padding: 20px;
-    }
-
-    @media screen and (max-height: 450px) {
-      .sidenav {padding-top: 15px;}
-      .sidenav a {font-size: 18px;}
-    }
-
-
-
-
-
-    </style>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/adminusers.css') }}">
 </head>
 
 <body class="bg-dark">
@@ -205,115 +71,5 @@
 </div>
 <div class="container-fluid h-10 bg-dark text-white "></div>
 </body>
-<script>
-    if (typeof(Storage) !== "undefined") {
-            if(localStorage.getItem("sidebar") == "opened"){
-                document.querySelector("#mySidenav").style.width = "250px";
-                document.querySelector("#main").style.marginLeft = "250px";
-            }
-        }
-    function openNav() {
-      document.querySelector("#mySidenav").style.width = "250px";
-      document.querySelector("#main").style.marginLeft = "250px";
-      if (typeof(Storage) !== "undefined") {
-            localStorage.setItem("sidebar", "opened");
-        }
-    }
-    function closeNav() {
-      document.querySelector("#mySidenav").style.width = "0";
-      document.querySelector("#main").style.marginLeft = "0";
-      if (typeof(Storage) !== "undefined") {
-            localStorage.setItem("sidebar", "closed");
-        }
-    }
-    
-    var lastCol = undefined;
-    var dir = undefined;
-
-    function sortTable2(col) {
-      //console.log(lastCol);
-      //console.log(dir);
-      if (lastCol == undefined) lastCol = col;
-      if (dir == undefined) dir = "asc";
-      if (lastCol != col) {
-        dir = "asc";
-        lastCol = col;
-      }
-      let table, rows, preswitch = [],
-        switching, i, x, y, shouldSwitch, switchcount = 0;
-      table = document.querySelector("#dbtable");
-      rows = table.rows;
-      console.log(document.querySelectorAll("TH"));
-      for (heading of document.querySelectorAll("TH")) {
-      console.log(heading)
-        heading.style.textDecoration = "none";
-      }
-      rows[0].querySelectorAll("TH")[col].style.textDecoration = "underline";
-      let tbody = document.querySelector("#dbtable > tbody");
-      let new_tbody = tbody.cloneNode();
-      //set direction to ascending initially
-      if (dir == "asc") {
-        dir = "desc"
-      } else {
-        dir = "asc"
-      }
-
-      for (i = 1; i < (rows.length); i++) {
-        preswitch.push([rows[i].querySelectorAll("TD")[0].innerHTML,rows[i].querySelectorAll("TD")[col].innerHTML])
-      }
-      //copy of preswitch
-      //console.log(preswitch)
-      let preswitch_copy = [...preswitch];
-
-      function merge(left, right) {
-        let array = []
-        // Break out of loop if any one of the array gets empty
-        while (left.length && right.length) {
-          // Pick the smaller among the smallest element of left and right sub arrays
-          if (left[0][1] < right[0][1]) {
-            array.push(left.shift())
-          } else {
-            array.push(right.shift())
-          }
-        }
-
-        // Concatenating the leftover elements
-        // (in case we didn't go through the entire left or right array)
-        // ... acts as a spread operator
-        return [...array, ...left, ...right]
-      }
-
-      function mergeSort(array) {
-        const halflength = array.length / 2
-
-        // Base case
-        if (array.length < 2) {
-          return array
-        }
-
-        const left = array.splice(0, halflength)
-        return merge(mergeSort(left), mergeSort(array))
-      }
-
-      sorted = mergeSort(preswitch);
-      preswitch = preswitch_copy;
-      // console.log(preswitch);
-      //console.log(sorted);
-      let index_array = [];
-      // get the order of the sorted array based on the preswitch array
-      sorted.forEach(value => {
-        index_array.push(preswitch.indexOf(value));
-        // console.log(index_array);
-      })
-      //console.log(index_array);
-      if(dir=="desc")index_array.reverse();
-      index_array.forEach(index => {
-        // console.log(tbody.children[index].children[1].innerHTML);
-        new_tbody.appendChild(tbody.children[index].cloneNode(true));
-      })
-      tbody.parentElement.replaceChild(new_tbody, tbody);
-    }
-
-
-</script>
+<script src="{{url_for('static', filename='js/tablefunction.js')}}"></script>
 </html>
